fix header spacing

--- a/themes/ewh/sass/_chinese-pages.scss
+++ b/themes/ewh/sass/_chinese-pages.scss
@@ -90,6 +90,7 @@
 }
 .chinese-single-title {
   padding-left: 1rem;
+  padding-top: 2rem;
   color: $color__text-white;
   background-image: url('../../images/chinese-banner.jpg');
   background-position: center;
