--- a/themes/ewh/style.css
+++ b/themes/ewh/style.css
@@ -965,7 +965,10 @@ body {
       margin-top: 72px; } }
   @media screen and (min-width: 1080px) {
     .site {
-      margin-top: 87px; } }
+      margin-top: 100px; } }
+
+.bcm-content-area {
+  padding-top: 1.5rem; }
 
 .site {
   position: relative;
@@ -2105,7 +2108,7 @@ section.birth-control.container {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   padding-bottom: 2rem;
-  padding-top: 1rem;
+  padding-top: 1.5rem;
   margin: auto; }
 
 div.hide-description {
@@ -2225,6 +2228,7 @@ div.hide-description {
 
 .chinese-single-title {
   padding-left: 1rem;
+  padding-top: 2rem;
   color: #fff;
   background-image: url("../../images/chinese-banner.jpg");
   background-position: center;
